# learning-pick-and-place

./: .gitignore  CMakeLists.txt  README.md  mypy.ini  package.xml  requirements.txt
cad-models/: README.md  framos-mount.fcstd  framos-mount.stl  realsense-mount-v1.stl
database/: app.py  stats.py
database/static/: main.js  style.css
database/templates/: index.html
docs/: index.html  script.js  style.css
include/ensenso/: config.hpp  ensenso.hpp
include/frankr/: geometry.hpp  gripper.hpp  motion.hpp  robot.hpp  waypoint.hpp
include/orthographic_image/: orthographic_image.hpp
include/realsense/: config.hpp  realsense.hpp
launch/: both.launch  gripper-ensenso-config.json  gripper-realsense-config.json  realsense.launch
msg/: Grasp.msg  OrthographicImage.msg
scripts/: config.py  experiment.py  grasping.py
scripts/actions/: action.py  converter.py  indexer.py
scripts/agents/: agent.py  agent_place.py
scripts/data/: loader.py
scripts/evaluation/: template_matching.py  view_displacement.py
scripts/inference/: inference.py  planar_place.py
scripts/learning/: placing-screw.py  placing.py
scripts/learning/utils/: layers.py  metrics.py
scripts/stubs/: cfrankr.pyi  orthographical.pyi
scripts/utils/: camera.py  episode.py  epoch.py  frames.py  goal_database.py  heatmap.py  image.py  param.py  path_fix_catkin.py  path_fix_ros.py  saver.py
scripts/view/: heatmap.py  image.py  lateral.py  model.py  place_planar.py  place_single.py  transformation.py
src/ensenso/: ensenso.cpp  ensenso_node.cpp
src/frankr/: gripper.cpp  python.cpp  robot.cpp
src/orthographic_image/: python.cpp
src/realsense/: realsense.cpp  realsense_node.cpp
srv/: GetOrthographicImages.srv
